# timeqa-_baseline_test

./: .gitignore  README.md  change.md  download_hf_model.py  evaluate_qa_results.py  graph_baseline.md  requirements.txt
DyG-RAG/: LICENSE  README.md  requirements.txt
DyG-RAG/datasets/: link.txt
DyG-RAG/demo/: Corpus.json
DyG-RAG/docs/: datasets.html
DyG-RAG/examples/: local_BGE_local_LLM.py  openai_all.py  tempreason_run.py  temreason_run.py  timeqa_run.py
DyG-RAG/graphrag/: _llm.py  _op.py  _utils.py  graphrag.py
DyG-RAG/reproduce/: README.md  complextr.py  tempreason.py  timeqa.py
GraphRAG/: all.py  insert.py  main.py  query.py
GraphRAG/Config/: LLMConfig.py
GraphRAG/Core/: GraphRAG.py
GraphRAG/Data/: DatasetLoaders.py  QueryDataset.py  __init__.py
GraphRAG/Option/: Config2.py  Config2.yaml
agent/: QWEN3-32B使用说明.md  verify_qwen3_config.sh  运行方法说明.md
agent/MRAG-master/: reader.py  utils.py
agent/timeqa_baseline_lab/: README.md  migration_report.md  pyproject.toml  requirements.txt
agent/timeqa_baseline_lab/configs/: default.yaml
agent/timeqa_baseline_lab/configs/methods/: qaap.yaml  react.yaml  zero_shot.yaml
agent/timeqa_baseline_lab/src/timeqa_baseline_lab/: __init__.py  chunking.py  config.py  data.py  evaluation.py  llm.py  retriever.py  run.py  run_all.py  runner.py  strategies.py
agent/timeqa_baseline_lab/src/timeqa_baseline_lab/migrated/: __init__.py  qaap_agent.py  qaap_utils.py  react_agent.py
agent/timeqa_baseline_lab/tests/unit/: test_strategies_single_question.py
evaluation_results/: results_table.csv  results_table.md
(+37 files in other folders)
