[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timeqa-baseline-lab"
version = "0.1.0"
description = "TimeQA baseline experiments with configurable LLM, chunking, and Contriever retrieval"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "torch>=2.1",
  "transformers>=4.45",
  "accelerate>=0.33",
  "pyarrow>=15.0",
  "tqdm>=4.66",
  "numpy>=1.26",
  "requests>=2.31"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
timeqa_baseline_lab = ["assets/*.json"]
